--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -25,5 +25,11 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml  -DskipTests
+      
+    - name: Build Docker image
+      run: docker build -t mauron/ms-curso-docker:latest .
 
+    - name: Push Docker image
+      run: docker push mauron/ms-curso-docker:latest
 
+  
